<resources>
    <string name="app_name">Point of Sale</string>
    <string-array name="categories">
        <item>Canned Goods</item>
        <item>Condiments</item>
        <item>Powdered Beverages</item>
        <item>Instant Noodles</item>
        <item>Others</item>
    </string-array>

    <string-array name="time_periods_array">
        <item>Today</item>
        <item>This Week</item>
    </string-array>

    <string-array name="period_options">
        <item>7</item>
        <item>14</item>
        <item>21</item>
        <item>28</item>
    </string-array>

    <string name="total_cost_label">Total Cost: ₱%.2f</string>
    <string name="delete_confirmation_title">Delete Confirmation</string>
    <string name="delete_confirmation_message">Are you sure you want to delete the selected items?</string>
    <string name="cart_label">Cart: %d</string>
    <string name="fields_empty_message">Fields can\'t be empty</string>
    <string name="email_empty_message">Email Field can\'t be empty</string>
    <string name="password_empty_message">Passwords Field can\'t be empty</string>
    <string name="password_diff_message">Password do not match</string>
    <string name="password_rule">Password must be at least 8 characters long</string>
    <string name="select_image_message">Please select an image</string>
    <string name="fail_insertion_message">Fail Insertion</string>
    <string name="transaction_confirmed_message">Transaction confirmed!</string>
    <string name="error_storing_transaction_message">Error storing transaction. Please try again.</string>
    <string name="insufficient_funds_message">Insufficient funds. Please enter a valid amount.</string>
    <string name="no_items_selected_message">Please select items to delete</string>
    <string name="total_products_label">Total Products: %d</string>
    <string name="total_transactions_label">Total Transactions: %d</string>
    <string name="login_success_message">Login Successfully</string>
    <string name="login_failed_message">Login Failed: </string>
    <string name="register_okay">Sign-up Successfully</string>
    <string name="register_fail">Sign-up Failed</string>
    <string name="email_address">Email Address</string>
    <string name="recover_account">Recover Account</string>
    <string name="timer">Timer</string>
    <string name="submit">Submit</string>
    <string name="log_in_lbl">Log-In</string>
    <string name="username_et">Email</string>
    <string name="login_password_et">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_to_register_btn">Register</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="recovery_code_hint">Code</string>
    <string name="send_confirmation_email">Send</string>
    <string name="recovery_email_sent">Recovery Code Sent</string>
    <string name="user_not_found">User not found</string>
    <string name="recent_login_required">Recent Login Required</string>
    <string name="recovery_email_failed">Failed to send the recovery code</string>
    <string name="enter_email">Please Enter you Email Address</string>
    <string name="timer_expired">Code is Expired</string>
    <string name="invalid_recovery_code">Code Invalid</string>
    <string name="total_canned_goods">Total Canned Goods</string>
    <string name="total_condiments">Total Condiments</string>
    <string name="instant_noodles">Instant Noodles</string>
    <string name="powdered_beverages">Powdered Beverages</string>
    <string name="others">Others</string>
    <string name="total_transactions">Total Transactions</string>
    <string name="product_stock_lbl">Product Stock</string>
    <string name="total_transactions_lbl">Total Transactions</string>
    <string name="category_count_label">%s: %d</string>
    <string name="days">Days</string>
    <string name="product_name">Product Name</string>
    <string name="add_products">Add Products</string>
    <string name="item_name">Item Name</string>
    <string name="item_brand">Item Brand</string>
    <string name="item_price">Item Price</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="todo">TODO</string>
    <string name="_0">0%</string>
    <string name="dashboard">Dashboard</string>
    <string name="point_of_sale">Point of Sale</string>
    <string name="manage_products">Manage Products</string>
    <string name="log_out">Quit</string>
    <string name="search">Search</string>
    <string name="phone_number">ex. 09123456789</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_code">Enter OTP Code</string>


</resources>