<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    tools:context=".MainActivity">

    <TextView
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:id="@+id/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:padding="20dp"
        android:text="@string/dashboard"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/posBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:text="@string/point_of_sale"
        android:textSize="25sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="monospace"
        android:background="@drawable/round_back_primary"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Label"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/productsBtn"
        android:text="@string/manage_products"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="monospace"
        android:background="@drawable/round_back_primary"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posBtn"
        app:layout_constraintVertical_bias="0.045" />

    <Button

        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/log_out"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textColor="@color/white"
        android:background="@drawable/round_back_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toEndOf="@+id/Label"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productsBtn" />

    <Spinner
        android:id="@+id/periodSpinner"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_primary"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/weekLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="monospace"
        android:padding="5dp"
        android:text="@string/days"
        android:textColor="@color/common_google_signin_btn_text_light_focused"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart" />

</androidx.constraintlayout.widget.ConstraintLayout>